--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
     <!-- Main Navigation -->
     <nav class="main-nav">
         <ul>
-            <li><a href="#home" class="active">ACCUEIL</a></li>
-            <li><a href="#about">À PROPOS</a></li>
-            <li><a href="#services">SERVICES</a></li>
-            <li><a href="#formations">FORMATIONS</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="index.html" class="active">ACCUEIL</a></li>
+            <li><a href="navigation/about.html">À PROPOS</a></li>
+            <!-- <li><a href="#service">SERVICES</a></li> -->
+            <li><a href="navigation/formations.html">FORMATIONS</a></li>
+            <li><a href="navigation/contacts.html">CONTACT</a></li>
         </ul>
     </nav>
 
