--- a/navigation/formations.html
+++ b/navigation/formations.html
@@ -34,25 +34,25 @@
             
             <div class="sidebar-service">
                 <i class="fas fa-code"></i>
-                <h5>Développement Web</h5>
+                <h5><a href="../index.html" class="active">ACCUEIL</a></h5>
                 <p>Solutions web modernes et performantes</p>
             </div>
 
             <div class="sidebar-service">
                 <i class="fas fa-mobile-alt"></i>
-                <h5>App Mobile</h5>
+                <h5><a href="../navigation/about.html">À PROPOS</a></h5>
                 <p>Applications mobiles natives et cross-platform</p>
             </div>
 
             <div class="sidebar-service">
                 <i class="fas fa-network-wired"></i>
-                <h5>Réseaux & Télécoms</h5>
+                <h5><a href="../navigation/formations.html">FORMATIONS</a></h5>
                 <p>Infrastructure réseau et télécommunications</p>
             </div>
 
             <div class="sidebar-service">
                 <i class="fas fa-shield-alt"></i>
-                <h5>Cybersécurité</h5>
+                <h5><a href="../navigation/contacts.html">CONTACT</a></h5>
                 <p>Protection et sécurisation des systèmes</p>
             </div>
 
