--- a/navigation/about.html
+++ b/navigation/about.html
@@ -27,15 +27,36 @@
 
   <!-- Sidebar -->
   <aside class="sidebar" id="sidebar">
-    <div class="sidebar-content">
-      <div class="sidebar-logo">ORRYS NUMERIC</div>
-      <div class="sidebar-service"><i class="fas fa-code"></i><h5>Développement Web</h5><p>Sites modernes et performants</p></div>
-      <div class="sidebar-service"><i class="fas fa-mobile-alt"></i><h5>App Mobile</h5><p>Apps natives & cross-platform</p></div>
-      <div class="sidebar-service"><i class="fas fa-network-wired"></i><h5>Réseaux & Télécoms</h5><p>Infrastructure fiable</p></div>
-      <div class="sidebar-service"><i class="fas fa-shield-alt"></i><h5>Cybersécurité</h5><p>Protection avancée</p></div>
-      <p style="margin-top: 2rem; text-align: center; opacity: 0.7;">© ORRYS NUMERIC 2025</p>
-    </div>
-  </aside>
+        <div class="sidebar-content">
+            <div class="sidebar-logo">ORRYS NUMERIC</div>
+            
+            <div class="sidebar-service">
+                <i class="fas fa-code"></i>
+                <h5><a href="../index.html" class="active">ACCUEIL</a></h5>
+                <p>Solutions web modernes et performantes</p>
+            </div>
+
+            <div class="sidebar-service">
+                <i class="fas fa-mobile-alt"></i>
+                <h5><a href="../navigation/about.html">À PROPOS</a></h5>
+                <p>Applications mobiles natives et cross-platform</p>
+            </div>
+
+            <div class="sidebar-service">
+                <i class="fas fa-network-wired"></i>
+                <h5><a href="../navigation/formations.html">FORMATIONS</a></h5>
+                <p>Infrastructure réseau et télécommunications</p>
+            </div>
+
+            <div class="sidebar-service">
+                <i class="fas fa-shield-alt"></i>
+                <h5><a href="../navigation/contacts.html">CONTACT</a></h5>
+                <p>Protection et sécurisation des systèmes</p>
+            </div>
+
+            <p style="margin-top: 2rem; text-align: center; opacity: 0.7;">© ORRYS NUMERIC 2025</p>
+        </div>
+    </aside>
 
   <!-- Header -->
   <header class="header">
