--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <div class="sidebar-service">
                 <i class="fas fa-network-wired"></i>
-                <h5><a href="navigation/contacts.html">CONTACT</a></h5>
+                <h5><a href="navigation/formations.html">FORMATION</a></h5>
                 <p>Infrastructure réseau et télécommunications</p>
             </div>
 
