--- a/navigation/contacts.html
+++ b/navigation/contacts.html
@@ -29,37 +29,38 @@
     </button>
 
     <!-- Sidebar Navigation -->
-    <aside class="sidebar" id="sidebar">
+     <aside class="sidebar" id="sidebar">
         <div class="sidebar-content">
             <div class="sidebar-logo">ORRYS NUMERIC</div>
             
             <div class="sidebar-service">
                 <i class="fas fa-code"></i>
-                <h5>Développement Web</h5>
+                <h5><a href="../index.html" class="active">ACCUEIL</a></h5>
                 <p>Solutions web modernes et performantes</p>
             </div>
 
             <div class="sidebar-service">
                 <i class="fas fa-mobile-alt"></i>
-                <h5>App Mobile</h5>
+                <h5><a href="../navigation/about.html">À PROPOS</a></h5>
                 <p>Applications mobiles natives et cross-platform</p>
             </div>
 
             <div class="sidebar-service">
                 <i class="fas fa-network-wired"></i>
-                <h5>Réseaux & Télécoms</h5>
+                <h5><a href="../navigation/formations.html">FORMATIONS</a></h5>
                 <p>Infrastructure réseau et télécommunications</p>
             </div>
 
             <div class="sidebar-service">
                 <i class="fas fa-shield-alt"></i>
-                <h5>Cybersécurité</h5>
+                <h5><a href="../navigation/contacts.html">CONTACT</a></h5>
                 <p>Protection et sécurisation des systèmes</p>
             </div>
 
             <p style="margin-top: 2rem; text-align: center; opacity: 0.7;">© ORRYS NUMERIC 2025</p>
         </div>
     </aside>
+
   <!-- Header -->
   <header class="header">
     <div class="header-content">
@@ -74,10 +75,11 @@
   <!-- Nav -->
   <nav class="main-nav">
     <ul>
-      <li><a href="../index.html">ACCUEIL</a></li>
-      <li><a href="about.html">À PROPOS</a></li>
-      <li><a href="formations.html">FORMATIONS</a></li>
-      <li><a href="contacts.html" class="active">CONTACT</a></li>
+       <li><a href="../index.html" class="active">ACCUEIL</a></li>
+            <li><a href="../navigation/about.html">À PROPOS</a></li>
+            <!-- <li><a href="#service">SERVICES</a></li> -->
+            <li><a href="../navigation/formations.html">FORMATIONS</a></li>
+            <li><a href="../navigation/contacts.html">CONTACT</a></li>
     </ul>
   </nav>
 
