--- a/navigation/service.html
+++ b/navigation/service.html
@@ -104,7 +104,7 @@
  <header class="header">
   <div class="header-content full">
     <div class="left">
-       <img src="../imgs/logob.png" alt="Logo ORRYS NUMERIC" class="logo">
+       <img src="../imgs/logo.png" alt="Logo ORRYS NUMERIC" class="logo">
     </div>
     <div class="center">
       <nav class="main-nav">
@@ -157,36 +157,56 @@
                          <img src="../imgs/moblie.jpg" alt="Formation APP MOBILE" />
                         <h3>Développement Mobiles</h3>
 
-                        <p><i class="fas fa-check-circle" style="font-size: 20px; margin-bottom: 0;"></i>Les applications mobiles IOS/Android tournant sur iphone et terminal android.</p>
+                       <div class="divider"></div>
+
+                    <ul class="service-description">
+                        <li><i class="fas fa-check-circle"></i> Création de sites vitrines, e-commerce & plateformes dynamiques</li>
+                        <li><i class="fas fa-check-circle"></i> Design responsive et performance optimisée</li>
+                        <li><i class="fas fa-check-circle"></i> Expérience utilisateur intuitive et moderne</li>
+                        <li><i class="fas fa-check-circle"></i> Utilisation des technologies récentes (HTML5, CSS3, JS, React)</li>
+                    </ul>
                     </article>
                     
                     <article class="service-card fade-in">
                         <i class="fas fa-network-wired"></i>
                          <img src="../imgs/reseaux.jpg" alt="Formation Réseaux et Télécom" />
                         <h3>Réseaux & Télécoms</h3>
-                        <p> <i class="fas fa-check-circle" style="font-size: 20px; margin-bottom: 0px;"></i>Conception et mise en place des réseaux informatiques et sécurisées. <br>
-                            <i class="fas fa-check-circle" style="font-size: 20px; margin-bottom: 0px;"></i>Installation et administration des hotspots Mikrotik, ubiquiti unify et autres.</p>
+                       <div class="divider"></div>
+
+                    <ul class="service-description">
+                        <li><i class="fas fa-check-circle"></i> Création de sites vitrines, e-commerce & plateformes dynamiques</li>
+                        <li><i class="fas fa-check-circle"></i> Design responsive et performance optimisée</li>
+                        <li><i class="fas fa-check-circle"></i> Expérience utilisateur intuitive et moderne</li>
+                        <li><i class="fas fa-check-circle"></i> Utilisation des technologies récentes (HTML5, CSS3, JS, React)</li>
+                    </ul>
                     </article>
                     
                     <article class="service-card fade-in">
                         <i class="fas fa-shield-alt"></i>
                          <img src="../imgs/secure.jpg" alt="Formation Cyber" />
                         <h3>Cybersécurité</h3>
-                        <p><i class="fas fa-check-circle" style="font-size: 20px; margin-bottom: 0;"></i>Protection complète de vos systèmes d'information contre les cybermenaces. 
-                            <i class="fas fa-check-circle" style="font-size: 20px; margin-bottom: 0;"></i>Audit de sécurité, mise en place de solutions de protection avancées et formation de vos équipes pour une sécurité optimale.
-                        </p>
+<div class="divider"></div>
+
+                    <ul class="service-description">
+                        <li><i class="fas fa-check-circle"></i> Création de sites vitrines, e-commerce & plateformes dynamiques</li>
+                        <li><i class="fas fa-check-circle"></i> Design responsive et performance optimisée</li>
+                        <li><i class="fas fa-check-circle"></i> Expérience utilisateur intuitive et moderne</li>
+                        <li><i class="fas fa-check-circle"></i> Utilisation des technologies récentes (HTML5, CSS3, JS, React)</li>
+                    </ul>
                     </article>
 
                     <article class="service-card fade-in">
                        <i class="fas fa-wrench"></i>
                          <img src="../imgs/depanage.webp" alt="Formation Maintenance" />
                         <h3>Assistance & Maintenance </h3>
-                        <p><i class="fas fa-check-circle" style="font-size: 20px;margin-bottom: 0;" ></i>Mises à jour logicielles <br>
-                            <i class="fas fa-check-circle" style="font-size: 20px; margin-bottom: 0;"></i>Audits de parc informatique <br>
-                            <i class="fas fa-check-circle" style="font-size: 20px; margin-bottom: 0;"></i>Intervention en cas de panne <br>
-                            <i class="fas fa-check-circle" style="font-size: 20px; margin-bottom: 0;"></i>Sauvegarde et restauration des données <br>
-                            <i class="fas fa-check-circle" style="font-size: 20px; margin-bottom: 0;"></i>Support technique pour un assistance rapide
-                        </p>
+                       <div class="divider"></div>
+
+                    <ul class="service-description">
+                        <li><i class="fas fa-check-circle"></i> Création de sites vitrines, e-commerce & plateformes dynamiques</li>
+                        <li><i class="fas fa-check-circle"></i> Design responsive et performance optimisée</li>
+                        <li><i class="fas fa-check-circle"></i> Expérience utilisateur intuitive et moderne</li>
+                        <li><i class="fas fa-check-circle"></i> Utilisation des technologies récentes (HTML5, CSS3, JS, React)</li>
+                    </ul>
 
                     </article>
 
