--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <header class="header">
   <div class="header-content full">
     <div class="left">
-      <img src="imgs/logob.png" alt="Logo ORRYS NUMERIC" class="logo">
+      <img src="imgs/" alt="Logo ORRYS NUMERIC" class="logo">
     </div>
     <div class="center">
       <nav class="main-nav">
