--- a/navigation/contacts.html
+++ b/navigation/contacts.html
@@ -87,7 +87,7 @@
  <header class="header">
   <div class="header-content full">
     <div class="left">
-       <img src="../imgs/logob.png" alt="Logo ORRYS NUMERIC" class="logo">
+       <img src="../imgs/logo.png" alt="Logo ORRYS NUMERIC" class="logo">
     </div>
     <div class="center">
       <nav class="main-nav">
