--- a/navigation/formations.html
+++ b/navigation/formations.html
@@ -11,6 +11,7 @@
   <script src="https://cdn.tailwindcss.com" defer></script> <!--le cdn pour le loader a point de rebondissement-->
   <script src="../script.js" defer></script>
   <script src="../scripts/formations.js" defer ></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
 
  
 </head>
@@ -89,7 +90,7 @@
  <header class="header">
   <div class="header-content full">
     <div class="left">
-      <img src="../imgs/logob.png" alt="Logo ORRYS NUMERIC" class="logo">
+      <img src="../imgs/" alt="Logo ORRYS NUMERIC" class="logo">
     </div>
     <div class="center">
       <nav class="main-nav">
@@ -221,6 +222,11 @@
       <div class="form-group">
         <label for="nom">Nom & prénom :</label>
         <input type="text" id="nom" name="nom" required />
+      </div>
+
+       <div class="form-group">
+        <label for="tel">Telephone :</label>
+        <input type="tel" id="tel" name="tel" required />
       </div>
       <div class="form-group">
         <label for="email">Adresse email :</label>
